# CodeCoach

./: .gitignore  README.MD  agent_server.py  create_docx.py  generate_data.py
my_workspace/: Sample.java  config.json  factorial.py  math_utils.py  palindrome.py  sample_doc.docx  sample_logic.html  transform.xslt
trm-agent/: README.md  pyproject.toml  train.py
trm-agent/data/: text.py  vision.py
trm-agent/models/: abstract.py  trm.py
trm-agent/training/: trainer.py
