[project]
name = "mlx-trm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mlx>=0.29.2",
    "mlx-data>=0.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "ruff>=0.14.0"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
profile = "black"
